[gd_scene load_steps=6 format=2]

[ext_resource path="res://nodes/UI/ActionButton/ActionButton.gd" type="Script" id=1]
[ext_resource path="res://shader/invertcolor_shadermaterial.tres" type="Material" id=2]
[ext_resource path="res://nodes/UI/button_normal.tres" type="StyleBox" id=3]
[ext_resource path="res://nodes/UI/button_active.tres" type="StyleBox" id=4]
[ext_resource path="res://assets/ui/examine.png" type="Texture" id=5]

[node name="ActionButton" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}
hover_material = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
margin_left = -16.0
margin_top = -20.0
margin_right = 76.0
margin_bottom = 64.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )

[node name="Sprite" type="TextureRect" parent="Button"]
margin_left = 22.1548
margin_top = 18.3723
margin_right = 69.1548
margin_bottom = 65.3723
texture = ExtResource( 5 )
stretch_mode = 4
[connection signal="mouse_entered" from="Button" to="." method="_on_hover"]
[connection signal="mouse_exited" from="Button" to="." method="_on_iddle"]
